@@ -1,0 +1,17 @@
+# system and eclipse files
+*.DS_Store
+*.svn
+*.buildpath
+*.project
+*.settings
+*.cache
+# ephFrame cached files
+*.json
+*.log
+cache/*
+p_*.css
+p_*.js
+# project specific files
+deploy*
+abResults.txt
+crateApp.sh
